Fix size of query info section.
Before the tab was too wide so we would get scroll bars for that section. This
shrinks the size of it and moves the alerts more to the left. They still don't
look great but it's an improvement.

--- a/templates/results/failed.html
+++ b/templates/results/failed.html
@@ -8,7 +8,7 @@
 {% block query_pane_class %}active{% endblock query_pane_class %}
 
 {% block query_note %}
-  <div class="span5 alert alert-error">
+  <div class="alert alert-error">
     There was a problem with your query. The error has been logged and we will look into it.
   </div>
 {% endblock query_note %}
