--- a/templates/results/pending.html
+++ b/templates/results/pending.html
@@ -8,7 +8,7 @@
 {% block query_pane_class %}active{% endblock query_pane_class %}
 
 {% block query_note %}
-  <div class="span5 alert">
+  <div class="alert">
     Your query has been successfully added to the queue.
     The page will refresh every 5 seconds until the results become available.
     You can bookmark this page, and check back later.
