--- a/templates/results/base.html
+++ b/templates/results/base.html
@@ -35,8 +35,8 @@
         </div>
 
         <div class="tab-content">
-          <div id='query' class="tab-pane {% block query_pane_class %}{% endblock query_pane_class %} span12 row">
-            <div class="span6">
+          <div id='query' class="tab-pane {% block query_pane_class %}{% endblock query_pane_class %} span10 row">
+            <div class="span5">
               <h3>Query interpretation</h3>
               <dl>
                 <dt>Number of sequences</dt>
@@ -53,8 +53,10 @@
               </dl>
             </div>
 
-            {% block query_note %}
-            {% endblock query_note %}
+            <div class="span3">
+              {% block query_note %}
+              {% endblock query_note %}
+            </div>
           </div>
 
           {% block results %}
