Use median for edit distances

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -49,8 +49,8 @@
         <td>{{ result.medianscore|floatformat:4 }}</td>
         <td>{{ result.meanpercentile|floatformat:2 }}</td>
         <td>{{ result.medianpercentile|floatformat:2 }}</td>
-        <td>{{ result.fulleditdist|floatformat }}</td>
-        <td>{{ result.interioreditdist|floatformat }}</td>
+        <td>{{ result.medianfulleditdist|floatformat }}</td>
+        <td>{{ result.medianinterioreditdist|floatformat }}</td>
         <td>{{ result.signature }}</td>
         <td>
             <a class="fancybox" rel="gallery" href="{{ result.ssurl }}"
