--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -17,7 +17,7 @@
 <div class="row">
 {% for loop in loops %}
     <div class="span8">
-    <strong>Loop {{ forloop.counter }} - {{ loop.firstSeq }}</strong>
+    <strong>Loop {{ forloop.counter }} - {{ loop.seqs }}</strong>
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
