--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -17,7 +17,14 @@
 <div class="row">
 {% for loop in loops %}
     <div class="span8">
-    <strong>Loop {{ forloop.counter }} - {{ dir(loop) }}</strong>
+    <strong>
+    Loop {{ forloop.counter }} - 
+    <ul>
+      {% for seq in loop.seqs %}
+        <li>{{ seq }}</li>
+      {% endfor %}
+    </ul>
+    </strong>
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
