--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -18,12 +18,14 @@
 {% for loop,sequences in results %}
     <div class="span8">
     <strong>
-    Loop {{ forloop.counter }} - 
-    <ul>
+    Loop {{ forloop.counter }} -
+    <div style="height:60px;width:360px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
       {% for seq in sequences %}
-        <li>{{ seq }}</li>
+          {{ seq }}<br>
       {% endfor %}
-    </ul>
+    
+    </div> 
+      
     </strong>
     <table class="table table-striped table-condensed table-bordered">
       <thead>
