Save column numbers to database

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -18,7 +18,7 @@
 {% for loop,sequences,indices in results %}
     <div class="span8">
     <strong>
-    Loop {{ forloop.counter }} - indices
+    Loop {{ forloop.counter }} - {{ indices }}
     <div style="height:60px;width:360px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
       {% for seq in sequences %}
           {{ seq }}<br>
