--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -54,7 +54,7 @@
             <a href="{{ result.motif_url }}" target="_blank">&rarr;</a>
           </span>
         </td>
-        <td>{{ result.cutoff|floatformat:4 }}</td>
+        <td>{{ result.cutoff_percent|floatformat:4 }}</td>
         <td>{{ result.meanscore|floatformat:4 }}</td>
         <td>{{ result.medianscore|floatformat:4 }}</td>
         <td>{{ result.medianpercentile|floatformat:2 }}</td>
