--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -17,8 +17,9 @@
 <div class="row">
 {% for loop,sequences,indices in results %}
     <div class="span8">
-    <strong>
-    Loop {{ forloop.counter }} - {{ indices }}
+    <h3>
+    Loop {{ forloop.counter }}
+    Column Numbers{{ indices }}
     <div style="height:60px;width:360px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
       {% for seq in sequences %}
           {{ seq }}<br>
@@ -26,7 +27,7 @@
     
     </div> 
       
-    </strong>
+    </h3>
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
