Update Input Summary

--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -22,7 +22,7 @@
     <dl>
         <dt>Input</dt>
             <dd>
-            <div class="span8".
+            <div class="span8">
             <textarea readonly id='input' rows='4' tabindex="1">
             {{query_info.parsed_input|linebreaks}}</textarea>
             </div>
