--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -17,15 +17,13 @@
 
 {% block page_content %}
 
-<div id='query-interpretation'>
+<div class="span8" id='query-interpretation'>
     <h3>Input Summary</h3>
     <dl>
         <dt>Input</dt>
             <dd>
-            <div class="span8">
             <textarea readonly id='input' rows='4' tabindex="1">
             {{query_info.parsed_input|linebreaks}}</textarea>
-            </div>
             </dd>
 
         <dt>Number of sequences</dt>
