Update Input Summary

--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -23,7 +23,7 @@
         <dt>Input</dt>
             <div class = "span8">
             <dd>
-            <textarea readonly id='input' rows='4' tabindex="1">
+            <textarea readonly id='input' rows='4'>
             {{query_info.parsed_input}}</textarea>
             </dd>
             </div>
