--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -23,8 +23,7 @@
         <dt>Input</dt>
             <div class = "span8">
             <dd>
-            <textarea readonly id='input' rows='4'>
-            {{query_info.parsed_input}}</textarea>
+            <textarea readonly id='input' rows='4'>{{query_info.parsed_input}}</textarea>
             </dd>
             </div>
 
