--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -3,7 +3,7 @@
 {% block page_specific_css_class %}results-done{% endblock page_specific_css_class %}
 
 {% block custom_css %}
-<script src="http://rna.bgsu.edu/img/jmol/jmol.js"></script>
+<script src="{{ STATIC_URL }}js/jsmol.jso"></script>
 {% endblock custom_css %}
 
 {% block page_subtitle %}
