Update Input Summary

--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -19,14 +19,10 @@
 
 <div id='query-interpretation'>
     <h3>Input Summary</h3>
+    <div class = "span8">
+        <textarea readonly id='input' rows='4' data-role="none">{{query_info.parsed_input}}</textarea>
+    </div>
     <dl>
-        <dt>Input</dt>
-            <div class = "span8">
-            <dd>
-            <textarea readonly id='input' rows='4'>{{query_info.parsed_input}}</textarea>
-            </dd>
-            </div>
-
         <dt>Number of sequences</dt>
         <dd>{{num.seq}}</dd>
 
