--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -116,3 +116,15 @@ table .headerSortUp:after {
 .ss-thumbnail {
     width: 120px;
 }
+
+.search-summary {
+  overflow: auto;
+  white-space: nowrap;
+  max-height: 150px;
+}
+
+.loop-summary {
+  overflow: auto;
+  white-space: nowrap;
+  max-height: 80px;
+}
