--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -3,7 +3,6 @@
 {% block title %}JAR3D Results{% endblock %}
 
 {% block page_subtitle %}
-  <button id='refine' class='btn btn-primary pull-right' data-id="{{query_info.query_id}}">Refine query</button>
 
 <!-- AddThis Button BEGIN -->
 <span class="addthis_toolbox addthis_default_style pull-right">
@@ -19,15 +18,25 @@
 
 <div id='query-interpretation'>
     <h3>Input Summary</h3>
-    <textarea readonly id='input' rows='4' data-role="none" class = "span8">{{query_info.parsed_input}}</textarea>
-    <dl>
+
+    <div class='span12'>
+    <div class="span6">
+      <pre class="pre-scrollabale search-summary">
+{{query_info.parsed_input|linebreaksbr}}
+      </pre>
+      <button id='refine' class='btn btn-primary pull-right' data-id="{{query_info.query_id}}">
+        Refine query
+      </button>
+    </div>
+
+    <dl class='span4 offset1'>
         <dt>Number of sequences</dt>
         <dd>{{num.seq}}</dd>
-
         <dt>Total number of loop instances</dt>
         <dd>{{num.loop_instances}}</dd>
-
     </dl>
+
+  </div>
 </div>
 
 {% endblock page_content %}
