--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -19,17 +19,14 @@
 
 <div class="row">
 {% for loop,sequences,indices in results %}
-    <div class="span8">
+    <div class="span8 loop-result-container">
     <h3>
     Loop {{ forloop.counter }}
     </h3>
     Column Numbers {{ indices }}
-    <div style="height:60px;width:360px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
-      {% for seq in sequences %}
-          {{ seq }}<br>
-      {% endfor %}
-
-    </div>
+    <pre class="pre-scrollable loop-summary">{% for seq in sequences %}
+{{seq}}<br/>
+{% endfor %}</pre>
 
     <table class="table table-striped table-condensed table-bordered">
       <thead>
@@ -130,7 +127,7 @@
 
           // position jmol
           (function(){
-              var reference = $('table').first();
+              var reference = $('.loop-result-container').first();
               var offset_left = reference.offset().left + reference.width();
               var offset_top  = reference.offset().top;
               $('#jmol').css('position','fixed')
