Add colon for after column numbers

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -23,7 +23,7 @@
     <h3>
     Loop {{ forloop.counter }}
     </h3>
-    Column Numbers {{ indices }}
+    Column Numbers: {{ indices }}
     <pre class="pre-scrollable loop-summary">{% for seq in sequences %}
 {{seq}}<br/>
 {% endfor %}</pre>
