Rename Basepair Signature to Interaction Signature

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -37,7 +37,7 @@
           <th>Mean Alignment Score</th>
           <th>Full Edit Distance</th>
           <th>Interior Edit Distance</th>
-          <th>Basepair Signature</th>
+          <th>Interaction Signature</th>
         </tr>
       </thead>
       <tbody>
