Example -> Sample Input

--- a/Templates/JAR3Doutput/base_homepage.html
+++ b/Templates/JAR3Doutput/base_homepage.html
@@ -16,7 +16,7 @@ predicting RNA 3D motifs in sequences
             placeholder="Single or aligned RNA/DNA sequences or single/multiple loops (fasta-formatted descriptions and secondary structures are optional)">{{input|default:''}}</textarea>
         </div>
         <div class="span2">
-            <h4>Examples</h4>
+            <h4>Sample Input</h4>
             <ul class="examples unstyled">
                 <li><a href='#' id="isNoFastaSingleLoop">Single loop</a></li>
                 <li><a href='#' id="isFastaSingleLoop">Single loop (fasta)</a></li>
