Placeholder for help text
This is where help text will be added.

--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -104,6 +104,23 @@
     <input type='button' id='next' class='btn' value="Next">
     <label><input type="checkbox" id="showNtNums">Numbers</label>
 </div>
+
+<div id="popup-text">
+  <div class="help-text" data-popup="percent">
+  </div>
+
+  <div class="help-text" data-popup="mean-score">
+  </div>
+
+  <div class="help-text" data-popup="full-edit">
+  </div>
+
+  <div class="help-text" data-popup="interior-edit">
+  </div>
+
+  <div class="help-text" data-popup="signature">
+  </div>
+</div>
 {% endblock page_content%}
 
 {% block page_specific_js %}
