--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -28,7 +28,7 @@
     <pre class="pre-scrollable loop-summary">{% for seq in sequences %}
 {{seq}}<br/>
 {% endfor %}</pre>
-
+    <strong>Click on headings to reorder table</strong>
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
