Format input for display

--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -23,7 +23,7 @@
 
     <div class="span8">
       <pre class="pre-scrollabale search-summary">
-        {{query_info.parsed_input|linebreaksbr}}
+        {{input_alignment}}
       </pre>
       <button id='refine' class='btn btn-primary pull-right' data-id="{{query_info.query_id}}">
         Refine query
