--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -32,7 +32,7 @@
       <thead>
         <tr>
           <th>#</th>
-          <th>Motif</th>
+          <th>Motif ID and 2D Diagram</th>
           <th>Percent Accepted by Model</th>
           <th>Mean Alignment Score</th>
           <th>Full Edit Distance</th>
