--- a/Templates/JAR3Doutput/base_result_done.html
+++ b/Templates/JAR3Doutput/base_result_done.html
@@ -1,11 +1,9 @@
 {% extends "JAR3Doutput/base_result.html" %}
-{% load staticfiles %}
 
 {% block page_specific_css_class %}results-done{% endblock page_specific_css_class %}
 
 {% block custom_css %}
-  <link rel="stylesheet" href="{% static "js/fancybox/jquery.fancybox.css" %}" type="text/css" media="screen" />
-  <link rel="stylesheet" href="{% static "css/tipsy.css" %}" type="text/css"/>
+<script src="http://rna.bgsu.edu/img/jmol/jmol.js"></script>
 {% endblock custom_css %}
 
 {% block page_subtitle %}
@@ -20,25 +18,28 @@
 
 <div class="row">
 {% for loop,sequences,indices in results %}
-    <div class="span8 loop-result-container">
+    <div class="span8">
     <h3>
     Loop {{ forloop.counter }}
     </h3>
-    Column Numbers: {{ indices }}
-    <pre class="pre-scrollable loop-summary">{% for seq in sequences %}
-{{seq}}<br/>
-{% endfor %}</pre>
-    <strong>Click on headings to reorder table</strong>
+    Column Numbers {{ indices }}
+    <div style="height:60px;width:360px;border:1px solid #ccc;font:16px/26px Georgia, Garamond, Serif;overflow:auto;">
+      {% for seq in sequences %}
+          {{ seq }}<br>
+      {% endfor %}
+    
+    </div> 
+    
     <table class="table table-striped table-condensed table-bordered">
       <thead>
         <tr>
-          <th class='table-header' data-header-name='index'>#</th>
-          <th class='table-header' data-header-name='motif'>Motif</th>
-          <th class='table-header' data-header-name='percent'>Percent Accepted by Model</th>
-          <th class='table-header' data-header-name='mean-score'>Mean Alignment Score</th>
-          <th class='table-header' data-header-name='full-edit'>Full Edit Distance</th>
-          <th class='table-header' data-header-name='interior-edit'>Interior Edit Distance</th>
-          <th class='table-header' data-header-name='signature'>Interaction Signature</th>
+          <th>#</th>
+          <th>Motif ID and 2D Diagram</th>
+          <th>Percent Accepted by Model</th>
+          <th>Mean Alignment Score</th>
+          <th>Full Edit Distance</th>
+          <th>Interior Edit Distance</th>
+          <th>Basepair Signature</th>
         </tr>
       </thead>
       <tbody>
@@ -57,7 +58,7 @@
                 <img class="ss-thumbnail" src="{{ result.ssurl }}"></img>
           </a>
         </td>
-        <td>{{ result.cutoff_percent|floatformat:2 }}</td>
+        <td>{{ result.cutoff_percent|floatformat:2 }}%</td>
         <td>{{ result.meanscore|floatformat:4 }}</td>
         <td>{{ result.medianfulleditdist|floatformat }}</td>
         <td>{{ result.medianinterioreditdist|floatformat }}</td>
@@ -71,34 +72,11 @@
 </div>
 
 <div class="span4" id="jmol">
-    <script src="{% static "jsmol/JSmol.min.js" %}"></script>
     <script type="text/javascript">
-        function jmolScript(cmd) {Jmol.script(jmolApplet0, cmd)};
-        function jmolScriptWait(cmd) {Jmol.scriptWait(jmolApplet0, cmd)};
-
-        Jmol.getProfile();
-
-        var jsMolSize = 340;
-
-        var config = {
-          width: jsMolSize,
-          height: jsMolSize,
-          debug: false,
-          color: "#F0F0F0",
-          addSelectionOptions: false,
-          use: "HTML5",
-          j2sPath: "{% static "jsmol/j2s" %}",
-          isSigned: false,
-          disableJ2SLoadMonitor: true,
-          disableInitialConsole: true,
-          allowjavascript: true,
-          readyFunction: function() {
-            $('.jmolInline').first().jmolToggle();
-          },
-        };
-        jmolApplet0 = Jmol.getApplet("jmolApplet0", config);
+        jmolInitialize(" http://rna.bgsu.edu/img/jmol");
+        jmolSetAppletColor("#ffffff");
+        jmolApplet(340, "javascript appletLoaded()");
     </script>
-
     <input type='button' id='neighborhood' class='btn' value="Show neighborhood">
     <input type='button' id='stereo' class='btn' value="Show stereo">
     <input type='button' id='prev' class='btn' value='Previous'>
@@ -106,73 +84,52 @@
     <label><input type="checkbox" id="showNtNums">Numbers</label>
 </div>
 
-<div id="popup-text">
-  <div class="help-text" hidden data-header-name="percent">
-  Percentage of input sequences which meet the criteria to match the motif.  80% or above is good.
-  </div>
-
-  <div class="help-text" hidden data-header-name="mean-score">
-  Average alignment score against the probabilistic model for this motif.  Closer to 0 is better.
-  </div>
-
-  <div class="help-text" hidden data-header-name="full-edit">
-  The median of the minimum edit distance between each input sequence and sequences of each motif from 3D structures.
-  </div>
-
-  <div class="help-text" hidden data-header-name="interior-edit">
-  The median of the minimum edit distance between each input sequence and sequences of each motif from 3D structures, aside from the flanking basepairs.
-  </div>
-
-  <div class="help-text" hidden data-header-name="signature">
-  A text summary of the interactions characteristic of this motif.
-  </div>
-</div>
 {% endblock page_content%}
 
 {% block page_specific_js %}
     {{ block.super }}
-    <script src="{% static "js/jquery.tablesorter.min.js" %}"></script>
-    <script src="{% static "js/jquery.jmolTools.js" %}"></script>
-    <script src="{% static "js/fancybox/jquery.fancybox.pack.js" %}"></script>
-    <script src="{% static "js/jquery.tipsy.js" %}"></script>
+    <script src="{{ STATIC_URL }}js/jquery.tablesorter.min.js"></script>
+    <script src="http://rna.bgsu.edu/img/jmolTools/jquery.jmolTools.js"></script>
 
     <script>
-      $(document).ready(function() {
-          $("table").tablesorter();
+    $(document).ready(function() {
+        $("table").tablesorter();
+    });
+    // initialize jmolTools
+    $('.jmolInline').jmolTools({
+        showStereoId: 'stereo',
+        showNeighborhoodId: 'neighborhood',
+        showNumbersId: 'showNtNums',
+        showNextId: 'next',
+        showPrevId: 'prev'
+    });
 
-          // initialize jmolTools
-          $('.jmolInline').jmolTools({
-              showStereoId: 'stereo',
-              showNeighborhoodId: 'neighborhood',
-              showNumbersId: 'showNtNums',
-              showNextId: 'next',
-              showPrevId: 'prev'
-          });
+    // make sure that jmol is ready
+    function appletLoaded (){
+        $('.jmolInline').first().jmolToggle();
+    }
+    </script>
 
-          // position jmol
-          (function(){
-              var reference = $('.loop-result-container').first();
-              var offset_left = reference.offset().left + reference.width();
-              var offset_top  = reference.offset().top;
-              $('#jmol').css('position','fixed')
-                        .css('left',offset_left)
-                        .css('top',offset_top);
-          })();
+    <script src="{{ STATIC_URL }}js/fancybox/jquery.fancybox.pack.js"></script>
+    <link rel="stylesheet" href="{{ STATIC_URL }}js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
 
-          // fancybox integration
-        $(".fancybox").fancybox({
-          openEffect	: 'none',
-          closeEffect	: 'none'
-        });
+    <script>
+    // position jmol
+    (function(){
+        var reference = $('table').first();
+        var offset_left = reference.offset().left + reference.width();
+        var offset_top  = reference.offset().top;
+        $('#jmol').css('position','fixed')
+                  .css('left',offset_left)
+                  .css('top',offset_top);
+    })();
 
-        $(".table-header").tipsy({
-            gravity: 's',
-            title: function() {
-              var name = $(this).data('header-name');
-              return $(".help-text[data-header-name='" + name + "']").text();
-            }
-        });
-      });
+    // fancybox integration
+	$(".fancybox").fancybox({
+		openEffect	: 'none',
+		closeEffect	: 'none'
+	});
+
     </script>
 
 {% endblock page_specific_js %}
