Reverting to re-add Blake's updates

--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -33,8 +33,8 @@
     <dl class='span3'>
         <dt>Number of sequences</dt>
         <dd>{{num.seq}}</dd>
-        <dt>Total number of loops</dt>
-        <dd>{{num.loops}}</dd>
+        <dt>Total number of loop instances</dt>
+        <dd>{{num.loop_instances}}</dd>
     </dl>
 
 </div>
