Pending page suggests manually reloading

--- a/Templates/JAR3Doutput/base_result_pending.html
+++ b/Templates/JAR3Doutput/base_result_pending.html
@@ -9,9 +9,9 @@
 
   <div class="span6">
   Your query has been successfully added to the queue.
-  The page will refresh every 5 seconds until the results become available.
-  You can bookmark this page, and check back later.
-  The results will be kept on the server indefinitely.
+  The page will refresh every 5 seconds until results for the first loops become available.
+  If your query has many loops, manually refresh the page after a few minutes.
+  The results will be kept on the server indefinitely at this URL.
 
   {{ block.super }}
   </div>
