Update css to preserve whitespace

--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -119,7 +119,7 @@ table .headerSortUp:after {
 
 .search-summary {
   overflow: auto;
-  white-space: nowrap;
+  white-space: pre;
   max-height: 100px;
 }
 
