Update css to preserve whitespace

--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -118,7 +118,8 @@ table .headerSortUp:after {
 }
 
 .search-summary {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: auto;
   white-space: pre;
   max-height: 100px;
 }
