--- a/Templates/JAR3Doutput/base_result.html
+++ b/Templates/JAR3Doutput/base_result.html
@@ -22,8 +22,8 @@
   </div>
 
     <div class="span8">
-      <pre class="pre-scrollable search-summary">
-        {{query_info.formatted_input|linebreaksbr}}
+      <pre class="pre-scrollabale search-summary">
+{{query_info.formatted_input|linebreaksbr}}
       </pre>
       <button id='refine' class='btn btn-primary pull-right' data-id="{{query_info.query_id}}">
         Refine query
