--- a/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
+++ b/JAR3Doutput/JAR3Dresults/static/css/jar3d.css
@@ -120,7 +120,7 @@ table .headerSortUp:after {
 .search-summary {
   overflow-x: auto;
   overflow-y: auto;
-  white-space: pre;
+  white-space: nowrap;
   font-family: 'DejaVu Sans Mono', monospace;
   max-height: 100px;
 }
