--- a/Templates/JAR3Doutput/base.html
+++ b/Templates/JAR3Doutput/base.html
@@ -12,7 +12,7 @@
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/jar3d.css" rel="stylesheet">
 
-    <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/favicon_j.ico"/>
+    <link rel="icon" type="image/png" href="{{STATIC_URL}}/favicon_j.ico"/>
 
     {% block custom_css %}{% endblock custom_css %}
   </head>
