--- a/Templates/JAR3Doutput/base.html
+++ b/Templates/JAR3Doutput/base.html
@@ -7,12 +7,12 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="icon" type="image/x-icon" href="{{STATIC_URL}}images/favicon_j.ico"/>
+
     <!-- Le styles -->
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="{{ STATIC_URL }}css/jar3d.css" rel="stylesheet">
-
-    <link rel="shortcut icon" type="image/x-icon" href="{{STATIC_URL}}favicon_j.ico"/>
 
     {% block custom_css %}{% endblock custom_css %}
   </head>
